[package]
name = "koru"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false
autobins = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { version = "0.7.3" }
